--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.0
   google_maps_flutter: ^1.0.6
-  location: ^3.1.0
   geolocator: ^6.1.6
+  #
+  fluttertoast: ^7.1.1
 
 dev_dependencies:
   flutter_test:
